// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anonymous grading doesnt show users names 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL={null}
          userName="Student"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Student
        </Text>
        <Text
          accessibilityLabel="Not Submitted,"
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#556572",
                },
              ],
            ]
          }
        >
          Not Submitted
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "borderColor": "#C7CDD1",
              "borderRightWidth": 2,
              "borderTopWidth": 2,
              "height": 10,
              "marginLeft": 7,
              "width": 10,
            },
            Object {
              "transform": Array [
                Object {
                  "rotate": "45deg",
                },
              ],
            },
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`excused row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          accessibilityLabel="Missing,"
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#EE0612",
                },
              ],
            ]
          }
        >
          Missing
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
          ]
        }
      >
        Excused
      </Text>
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "borderColor": "#C7CDD1",
              "borderRightWidth": 2,
              "borderTopWidth": 2,
              "height": 10,
              "marginLeft": 7,
              "width": 10,
            },
            Object {
              "transform": Array [
                Object {
                  "rotate": "45deg",
                },
              ],
            },
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`late graded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          accessibilityLabel="Late,"
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#FC5E13",
                },
              ],
            ]
          }
        >
          Late
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 14,
                "fontWeight": "600",
              },
              Object {
                "alignSelf": "center",
              },
            ],
          ]
        }
      >
        B-
      </Text>
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "borderColor": "#C7CDD1",
              "borderRightWidth": 2,
              "borderTopWidth": 2,
              "height": 10,
              "marginLeft": 7,
              "width": 10,
            },
            Object {
              "transform": Array [
                Object {
                  "rotate": "45deg",
                },
              ],
            },
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`missing ungraded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          accessibilityLabel="Missing,"
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#EE0612",
                },
              ],
            ]
          }
        >
          Missing
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "borderColor": "#C7CDD1",
              "borderRightWidth": 2,
              "borderTopWidth": 2,
              "height": 10,
              "marginLeft": 7,
              "width": 10,
            },
            Object {
              "transform": Array [
                Object {
                  "rotate": "45deg",
                },
              ],
            },
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`submitted not_graded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Green Latern
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "borderColor": "#C7CDD1",
              "borderRightWidth": 2,
              "borderTopWidth": 2,
              "height": 10,
              "marginLeft": 7,
              "width": 10,
            },
            Object {
              "transform": Array [
                Object {
                  "rotate": "45deg",
                },
              ],
            },
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`submitted ungraded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          accessibilityLabel="Submitted,"
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#127A1B",
                },
              ],
            ]
          }
        >
          Submitted
        </Text>
        <Text
          color="#008EE2"
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "fontSize": 11,
                  "fontWeight": "500",
                  "overflow": "hidden",
                  "paddingBottom": 0,
                  "paddingLeft": 6,
                  "paddingRight": 6,
                  "paddingTop": 3,
                  "textAlign": "center",
                },
                Object {
                  "borderColor": "#008EE2",
                  "color": "#008EE2",
                },
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": 8,
                },
              ],
            ]
          }
        >
          NEEDS GRADING
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "borderColor": "#C7CDD1",
              "borderRightWidth": 2,
              "borderTopWidth": 2,
              "height": 10,
              "marginLeft": 7,
              "width": 10,
            },
            Object {
              "transform": Array [
                Object {
                  "rotate": "45deg",
                },
              ],
            },
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`unsubmitted ungraded row renders correctly 1`] = `
<View>
  <TouchableHighlight
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission-1"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 10,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 10,
        }
      }
    >
      <View
        style={
          Object {
            "height": 40,
            "marginRight": 8,
            "width": 40,
          }
        }
      >
        <Avatar
          avatarURL="https://cats.pajamas/"
          userName="Green Latern"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
            ]
          }
        >
          Green Latern
        </Text>
        <Text
          accessibilityLabel="Not Submitted,"
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Array [
                Object {
                  "fontSize": 14,
                  "paddingTop": 2,
                },
                undefined,
                Object {
                  "color": "#556572",
                },
              ],
            ]
          }
        >
          Not Submitted
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "borderColor": "#C7CDD1",
              "borderRightWidth": 2,
              "borderTopWidth": 2,
              "height": 10,
              "marginLeft": 7,
              "width": 10,
            },
            Object {
              "transform": Array [
                Object {
                  "rotate": "45deg",
                },
              ],
            },
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;
